--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         // استخدم بروكسي CORS للطلب
-        const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
+       // const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
         const apiUrl = 'http://emad-transporttest.great-site.net/api/index.php';
 
         fetch(proxyUrl + apiUrl)
