--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        // const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
         const apiUrl = 'http://emad-transporttest.great-site.net/api/index.php';
 
-        fetch(proxyUrl + apiUrl)
+        fetch(apiUrl)
             .then(response => response.json())
             .then(data => console.log(data))
             .catch(error => console.error('Error fetching data:', error));
