--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
         // استخدم بروكسي CORS للطلب
        // const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
-        const apiUrl = 'http://emad-transporttest.great-site.net/api/index.php';
+        const apiUrl = 'https://emad-transporttest.great-site.net/api/index.php';
 
         fetch(apiUrl)
             .then(response => response.json())
