--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
 </head>
 <body>
     <script>
-        // استخدم بروكسي CORS للطلب
-       // const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
-        const apiUrl = 'https://emad-transporttest.great-site.net/api/index.php';
-
-        fetch(apiUrl)
-            .then(response => response.json())
-            .then(data => console.log(data))
-            .catch(error => console.error('Error fetching data:', error));
+        fetch("https://emad-transporttest.great-site.net/api/index.php/").then(Request => Request.json()).then(
+            data => console.log(data)
+        )
     </script>
 </body>
 </html>
