--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         fetch("https://emad-transporttest.great-site.net/api/index.php/", {mode: 'no-cors'}).then(Request => Request.json()).then(
-            data => console.log(data)
+            data => console.log(data);
         );
     </script>
 </body>
